Fix fs-tool and mission issues
